syntax = "proto3";
package core.zephyr.solo.io;
option go_package = "github.com/solo-io/mesh-projects/pkg/api/core.zephyr.solo.io/v1alpha1/types";

import "google/protobuf/wrappers.proto";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

// reference object for kubernetes objects, support multi cluster
message ResourceRef {

    /*
        The kubernetes kind of the object
        Up to the user to decide whether or not to use this field, can be implicit
        or explicit depending on the use case.
    */
    google.protobuf.StringValue APIGroup = 1;

    google.protobuf.StringValue kind = 2;

    string name = 3;

    /*
        The namespace in which the object lives
        if left empty it will default to the namespace of the object referencing it.
    */
    string namespace = 4;

    /*
        Required: the cluster on which the object exists.
    */
    string cluster = 5;
}
